--- a/self_certified/nginx/nginx.conf
+++ b/self_certified/nginx/nginx.conf
@@ -7,7 +7,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name speedtest-test.biocad.ru;
+        server_name speedtest-test.example.com;
 
         ssl_certificate /etc/letsencrypt/certfolder/fullchain1.pem;
         ssl_certificate_key /etc/letsencrypt/certfolder/privkey1.pem;
